test/negative/feature_superfieldaccess.joos

public class A {
  public A() {}
  public int f;
}

public class B extends A {
  public B() {}
  public int m() { return super.f; }
}

